<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joseanadia.nback.Start"
    android:background="@color/lightBlue">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/title"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/raleway_regular"
        android:onClick="play"
        android:text="@string/play_label"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/raleway_regular"
        android:onClick="settings"
        android:text="@string/setting_label"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

</android.support.constraint.ConstraintLayout>
